# sketchy_pix2pix

./: .gitignore  cargo.toml  readme.md
crates/sketchy_pix2pix/: Cargo.toml
crates/sketchy_pix2pix/src/: lib.rs  logging.rs  main.rs  util.rs
crates/sketchy_pix2pix/src/pix2pix/: discriminator.rs  gan.rs  generator.rs  mod.rs  training.rs
crates/sketchy_pix2pix/src/sketchy_database/: mod.rs  sketchy_batcher.rs  sketchy_dataset.rs
crates/sketchy_pix2pix/tests/: batcher_tests.rs  dataset_tests.rs  discriminator_tests.rs  generator_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
