[package]
name = "sketchy_pix2pix"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "train_pix2pix"
path = "src/bin/pix2pix_training.rs"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false, features = ["std", "wgpu", "dataset", "train"] }
image = "0.25"
indicatif = "0.17"
log = "0.4"
rand = "0.9"
rerun = "0.22"
ron = "0.8.0"
serde ={ version = "1.0", features = ["derive"]}
thiserror = "2.0"
walkdir = "2.5"